--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <script type="module" src="/main.js"></script>
 
     <button id="generate-proof" onclick="generateProof()">Generate Proof</button>
+
+    <div id="proof-result"></div>
   </body>
 </html>
