--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
+    <script>
+      document.getElementById("thread-count").innerHTML = window.location.pathname;
+    </script>
+
+    <h1 id="thread-count"></h1>
+
+    <a href="/single-thread">Single Thread</a>
+    <br/>
+    <a href="/multi-thread">Multi Thread</a>
+    <br/>
+    <br/>
 
     <button id="generate-proof" onclick="generateProof()">Generate Proof</button>
 
