--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
   </head>
   <body>
     <div id="app"></div>
+    <button style="display: none;" id="generate-proof">Generate Proof</button>
+
     <script type="module" src="/main.js"></script>
     <h1 id="thread-count"></h1>
 
-    <a href="/?single-thread">Single Thread</a>
+    <a href="/single-thread">Single Thread</a>
     <br/>
-    <a href="/?multi-thread">Multi Thread</a>
+    <a href="/multi-thread">Multi Thread</a>
     <br/>
     <br/>
 
-    <button style="display: none;" id="generate-proof" onclick="generateProof()">Generate Proof</button>
 
     <div id="proof-result"></div>
 
 
     <script>
-      document.getElementById("thread-count").innerHTML = window.location.search.slice(1);
+      document.getElementById("thread-count").innerHTML = window.location.pathname;
 
-      if (window.location.search.includes("thread")) {
+      if (window.location.pathname.includes("thread")) {
         document.getElementById("generate-proof").style.display = "block";
       }
     </script>
