add input for threads

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   </head>
   <body>
     <h1 id="thread-count"></h1>
+    <input type="number" id="num-threads" value="1" />
+
+    
     <div id="app"></div>
     <button style="display: none;" id="generate-proof">Generate Proof</button>
 
     <script type="module" src="/main.js"></script>
+
 
     <a href="/single-thread">Single Thread</a>
     <br/>
