--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
     <div id="proof-result"></div>
 
+    <div id="logs" style="
+      font-family: 'Courier New', monospace;
+      padding: 20px;
+      border: 1px solid #e0e0e0;
+      line-height: 1.5;
+    "></div>
 
     <script>
       document.getElementById("thread-count").innerHTML = window.location.pathname;
