--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <title>Vite App</title>
   </head>
   <body>
+
+    <input type="number" id="initial-memory" value="32" />
+    <input type="number" id="maximum-memory" value="65536" />
+    <input type="number" id="threads" value="8" />
+    <input type="number" id="circuit-size" value="100000" />
+
+    <button id="load-wasm">Load Wasm</button>
+    <br />
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+
     <h1 id="thread-count"></h1>
     <input type="number" id="num-threads" value="8" />
 
-    
     
     <div id="app"></div>
     <button style="display: none;" id="generate-proof">Generate Proof</button>
