add memory profiler

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <input type="number" id="circuit-size" value="100000" />
 
     <button id="load-wasm">Load Wasm</button>
+
+    <div id="memory-info" style="
+      font-family: 'Courier New', monospace;
+      padding: 10px;
+      border: 1px solid #ddd;
+      margin-top: 10px;
+      margin-bottom: 20px;
+    "></div>
+
     <br />
     <br/>
     <br/>
