--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
   </head>
   <body>
 
+
+    <label for="initial-memory">Initial Memory</label>
     <input type="number" id="initial-memory" value="32" />
+    <br />
+    <label for="maximum-memory">Maximum Memory</label>
     <input type="number" id="maximum-memory" value="65536" />
+    <br />
+    <label for="threads">Threads</label>
     <input type="number" id="threads" value="8" />
+    <br />
+    <label for="circuit-size">Circuit Size</label>
     <input type="number" id="circuit-size" value="100000" />
+    <br />
 
     <button id="load-wasm">Load Wasm</button>
 
