--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,8 +6,6 @@
     <title>Vite App</title>
   </head>
   <body>
-
-
     <label for="initial-memory">Initial Memory</label>
     <input type="number" id="initial-memory" value="32" />
     <br />
@@ -17,61 +15,37 @@
     <label for="threads">Threads</label>
     <input type="number" id="threads" value="8" />
     <br />
-    <label for="circuit-size">Circuit Size</label>
-    <input type="number" id="circuit-size" value="100000" />
     <br />
 
     <button id="load-wasm">Load Wasm</button>
-
-    <div id="memory-info" style="
-      font-family: 'Courier New', monospace;
-      padding: 10px;
-      border: 1px solid #ddd;
-      margin-top: 10px;
-      margin-bottom: 20px;
-    "></div>
-
     <br />
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <br />
 
-    <h1 id="thread-count"></h1>
-    <input type="number" id="num-threads" value="8" />
-
-    
     <div id="app"></div>
-    <button style="display: none;" id="generate-proof">Generate Proof</button>
+    <button id="generate-proof">Generate Proof</button>
+    <br />
+    <br />
 
     <script type="module" src="/main.js"></script>
 
-
-    <a href="/single-thread">Single Thread</a>
-    <br/>
-    <a href="/multi-thread">Multi Thread</a>
-    <br/>
-    <br/>
-
-
-    <div id="proof-result"></div>
-
-    <div id="logs" style="
-      font-family: 'Courier New', monospace;
-      padding: 20px;
-      border: 1px solid #e0e0e0;
-      line-height: 1.5;
-    "></div>
+    <div
+      id="logs"
+      style="
+        font-family: 'Courier New', monospace;
+        padding: 20px;
+        border: 1px solid #e0e0e0;
+        line-height: 1.5;
+        white-space: pre-line;
+      "
+    ></div>
 
     <script>
-      document.getElementById("thread-count").innerHTML = window.location.pathname;
+      document.getElementById("thread-count").innerHTML =
+        window.location.pathname;
 
       if (window.location.pathname.includes("thread")) {
         document.getElementById("generate-proof").style.display = "block";
       }
     </script>
-
   </body>
 </html>
