--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <br />
     <br />
 
-    <button id="load-wasm">Load Wasm</button>
+    <button id="load-wasm">Load Wasm directly</button>
+
+    <button id="load-bb-wasm">Load BB Wasm</button>
+
     <br />
     <br />
 
