--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Vite App</title>
+    <style>
+      body {
+        max-width: 100%;
+        overflow-x: hidden;
+      }
+    </style>
   </head>
   <body>
     <label for="initial-memory">Initial Memory</label>
@@ -39,6 +45,8 @@
         border: 1px solid #e0e0e0;
         line-height: 1.5;
         white-space: pre-line;
+        max-width: 100%;
+        overflow-x: hidden;
       "
     ></div>
 
